[INSTALL][files] added a default nodes.conf which introduces some new router types
Signed-off-by: Robert Wuttke <flash@jpod.cc>

--- a/src/INSTALL
+++ b/src/INSTALL
@@ -15,3 +15,6 @@ export PYTHON=python3; ./configure --prefix=/usr
 
 make $BUILD_PARALLEL
 su -c "make install" root
+
+mkdir $HOME/.core
+cp files/nodes.conf $HOME/.core/
