--- a/src/INSTALL
+++ b/src/INSTALL
@@ -15,7 +15,7 @@ export PYTHON=python3; ./configure --prefix=/usr
 
 make $BUILD_PARALLEL
 su -c "make install" root
-[ -e "/usr/lib/python3.3" ] && [ -z /usr/lib/python3.3/dist-packages ] && \
+[ -e "/usr/lib/python3.3" ] && [ \! -e /usr/lib/python3.3/dist-packages ] && \
     su -c "ln -s /usr/lib/python3.3/site-packages /usr/lib/python3.3/dist-packages" root
 
 mkdir -p $HOME/.core
