--- a/src/INSTALL
+++ b/src/INSTALL
@@ -7,8 +7,8 @@ BUILD_PARALLEL="-j1"
 su -c "apt-get install bash bridge-utils ebtables iproute libev-dev python \
     tcl8.5 tk8.5 libtk-img \
     autoconf automake gcc libev-dev make libreadline-dev pkg-config \
-    imagemagick help2man \
-    python3 python3-dev quagga dnsmasq" root
+    imagemagick help2man unionfs-fuse \
+    python3 python3-dev quagga dnsmasq bind9" root
 
 ./bootstrap.sh
 export PYTHON=python3; ./configure --prefix=/usr
@@ -20,4 +20,6 @@ su -c "make install" root
 
 mkdir -p $HOME/.core
 cp files/nodes.conf $HOME/.core/
+cp files/ipaddrs.conf $HOME/.core/
+cp files/widgets.conf $HOME/.core/
 
