--- a/src/INSTALL
+++ b/src/INSTALL
@@ -18,8 +18,16 @@ su -c "make install" root
 [ -e "/usr/lib/python3.3" ] && [ \! -e /usr/lib/python3.3/dist-packages ] && \
     su -c "ln -s /usr/lib/python3.3/site-packages /usr/lib/python3.3/dist-packages" root
 
-mkdir -p $HOME/.core
-cp files/nodes.conf $HOME/.core/
-cp files/ipaddrs.conf $HOME/.core/
-cp files/widgets.conf $HOME/.core/
+CORECFG="/etc/core"
+mkdir -p "$CORECFG"
+chmod -R 775 "$CORECFG"
+addgroup core || echo "group \"core\" already exists. this can be ignored"
+chgrp -R core "$CORECFG"
+
+#mkdir -p $HOME/.core
+cp files/nodes.conf "$CORECFG/"
+cp files/ipaddrs.conf "$CORECFG/"
+cp files/widgets.conf "$CORECFG/"
+
+echo "done. now for each user using core, create a symlink pointing from \"$HOME/.core\" -> \"$CORECFG\""
 
