--- a/src/INSTALL
+++ b/src/INSTALL
@@ -7,10 +7,10 @@ CORECFG="/etc/core"
 PYTHON=python3
 
 export PYTHON
-su -c "apt-get purge quagga; apt-get install bash bridge-utils ebtables iproute libev-dev python \
+su -c "apt-get update; apt-get purge quagga; apt-get install bash bridge-utils ebtables iproute libev-dev python \
     tcl8.5 tk8.5 libtk-img gawk snmpd libsnmp-dev \
     autoconf automake gcc libev-dev make libreadline-dev pkg-config \
-    imagemagick help2man unionfs-fuse \
+    imagemagick help2man unionfs-fuse libpcap-dev \
     python3 python3-dev dnsmasq bind9 lighttpd \
     tmux" root
 
@@ -44,7 +44,7 @@ su -c "( cd ../contrib/quagga && \
     cd quagga-0.99.22.4 && \
     patch -p1 < ../000-vtysh.patch && \
     ./configure --prefix= \
-        --enable-snmp=agentx \
+        --enable-snmp \
         --enable-isisd \
         --enable-multipath=1 \
         --sysconfdir=/etc/quagga \
