--- a/src/INSTALL
+++ b/src/INSTALL
@@ -11,7 +11,8 @@ su -c "apt-get install bash bridge-utils ebtables iproute libev-dev python \
     tcl8.5 tk8.5 libtk-img \
     autoconf automake gcc libev-dev make libreadline-dev pkg-config \
     imagemagick help2man unionfs-fuse \
-    python3 python3-dev quagga dnsmasq bind9 lighttpd" root
+    python3 python3-dev quagga dnsmasq bind9 lighttpd \
+    tmux" root
 
 ./bootstrap.sh
 ./configure --prefix=/usr
@@ -24,7 +25,8 @@ su -c "make install && \
     chgrp -R core \"$CORECFG\" && \
     cp -v files/nodes.conf \"$CORECFG/\" && \
     cp -v files/ipaddrs.conf \"$CORECFG/\" && \
-    cp -v files/widgets.conf \"$CORECFG/\"" root
+    cp -v files/widgets.conf \"$CORECFG/\" && \
+    ln -s \"$CORECFG\" /root/.core" root
 
 echo "done. now for each user using core, create a symlink pointing from \"$HOME/.core\" -> \"$CORECFG\""
 
