--- a/src/INSTALL
+++ b/src/INSTALL
@@ -9,7 +9,7 @@ PYTHON=python3
 export PYTHON
 su -c "apt-get update; apt-get purge quagga snmpd libsnmp-dev; \
     apt-get install bash bridge-utils ebtables iproute libev-dev python \
-    tcl8.5 tk8.5 libtk-img gawk \
+    tcl8.5 tk8.5 libtk-img gawk libperl-dev \
     autoconf automake gcc libev-dev make libreadline-dev pkg-config \
     imagemagick help2man unionfs-fuse libpcap-dev \
     python3 python3-dev bind9 lighttpd \
@@ -46,6 +46,20 @@ su -c "make install && \
     (for i in /home/*; do \
         echo \"creating link in \"\$i\"\"; ln -s \"$CORECFG\" \"\$i/.core\" || \
         echo \"link already exists. this can be ignored\"; done)" root
+
+echo "building and installing netsnmp..."
+su -c "(cd ../contrib/snmp && \
+    tar -xzvf net-snmp-5.7.2.1.tar.gz && \
+    cd net-snmp-5.7.2.1 && \
+    ./configure --prefix=\"/usr\" --enable-new-features --enable-ipv6 \
+        --with-default-snmp-version=\"3\" --with-sys-contact=\"Unknown\" \
+        --with-sys-location=\"Unknown\" --with-logfile=\"/var/log/snmpd.log\" \
+        --with-persistent-directory=\"/var/net-snmp\" && \
+    make $BUILD_PARALLEL && \
+    make install && \
+    cd .. && \
+    cp -v ./snmpd.init /etc/init.d/ && \
+    update-rc.d -f snmpd remove)" root
 
 echo "building and installing quagga..."
 su -c "( cd ../contrib/quagga && \
