--- a/src/INSTALL
+++ b/src/INSTALL
@@ -78,7 +78,7 @@ su -c "( cd ../contrib/quagga && \
     cd .. && \
     mkdir -p /etc/quagga && \
     cp -v ./debian.conf /etc/quagga/ && \
-    cp -v ./quagga /etc/init.d/ && \
+    cp -v ./quagga.init /etc/init.d/quagga && \
     update-rc.d -f quagga remove)" root
 
 su -c "adduser --system --shell /bin/false --no-create-home --group --disabled-password --disabled-login quagga" root
