[contrib/quagga] remove check if it's own interface IPv4 match IIH IPv4 addrs
* Apparently, JUNOS and IOS do checks whehter the local interface address
  is also found in the IS-IS Hello. But neither ISO/IEC 10589:2002 nor RFC1195
  mention it's need.

* In addition, the removed code only checked for IPv4 addresses. Thus, if an
  IPv6-only network was being deployed, IS-IS would not manage to create any
  adjacencies due to the missing IPv4 addresses.

Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/INSTALL
+++ b/src/INSTALL
@@ -66,6 +66,7 @@ su -c "( cd ../contrib/quagga && \
     tar -xzf quagga-0.99.22.4.tar.gz && \
     cd quagga-0.99.22.4 && \
     patch -p1 < ../000-vtysh.patch && \
+    patch -p1 < ../001-isis_pdu_iih.patch && \
     ./configure --prefix= \
         --enable-snmp \
         --enable-isisd \
@@ -112,7 +113,6 @@ cd ../contrib/BENOCS/ifindex/src
 g++ -o ifindex ifindex.cpp
 su -c "mkdir -p /opt/BENOCS/bin && cp ifindex /opt/BENOCS/bin/ifindex" root
 )
-
 
 echo "Installing BRITE dependencies.."
 su -c "apt-get install default-jre python-pydot" root
