--- a/src/INSTALL
+++ b/src/INSTALL
@@ -16,7 +16,7 @@ su -c "apt-get update; apt-get purge quagga snmpd libsnmp-dev; \
     autoconf automake gcc libev-dev make libreadline-dev pkg-config \
     imagemagick help2man unionfs-fuse libpcap-dev \
     python3 python3-dev bind9 lighttpd \
-    tmux" root
+    tmux texinfo" root
 
 daemons="bind9 lighttpd"
 su -c "(for daemon in $daemons; do \
